--- a/frontend/index.html
+++ b/frontend/index.html
@@ -53,7 +53,7 @@
                     <i class="ri-code-line" aria-hidden="true" id="yt" target="_blank"></i>
                 </a>
             </div>
-            <a href="./img/Manikanta Resume.pdf" class="btn" target="_blank">Download CV</a>
+            <a href="./img/Manikanta_Web_Resume.pdf" class="btn" target="_blank">Download CV</a>
         </div>
         <div class="home-img">
             <img src="./img/Profile.jpg" alt="Profile Image">
@@ -191,5 +191,6 @@
     </script>
     <script src="./app.js"></script>
 </body>
+
 
 </html>
